Доступ к камере, структуры API

--- a/BarcodeScanner/Info.plist
+++ b/BarcodeScanner/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Give us access to camera for scanning codes</string>
 </dict>
 </plist>
