--- a/BarcodeScanner.xcworkspace/xcshareddata/IDETemplateMacros.plist
+++ b/BarcodeScanner.xcworkspace/xcshareddata/IDETemplateMacros.plist
@@ -1,4 +1,9 @@
-//
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+    <key>FILEHEADER</key>
+    <string>
 //  MIT License
 //
 //  Copyright (c) 2021 Tamerlan Satualdypov
@@ -20,28 +25,6 @@
 //  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 //  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 //  SOFTWARE.
-
-import Foundation
-
-protocol ProductPresenterProtocol {
-    func viewDidLoad() -> ()
-    init(view: ProductViewControllerProtocol, product: Product)
-}
-
-final class ProductPresenter : ProductPresenterProtocol {
-    
-    private weak var view: ProductViewControllerProtocol?
-    private var product: Product
-    
-    public func viewDidLoad() -> () {
-        self.view?.set(image: self.product.image)
-        self.view?.set(classification: self.product.classification)
-        self.view?.set(name: self.product.name)
-        self.view?.set(barcode: self.product.barcode)
-    }
-    
-    init(view: ProductViewControllerProtocol, product: Product) {
-        self.view = view
-        self.product = product
-    }
-}
+  </string>
+</dict>
+</plist>
